overflow fix / styling changes

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -40,6 +40,7 @@ body {
     background-image: url(../res/pictures/bg.png);
     font-family: mono-display;
     margin: 0;
+    min-width: 500px;
 }
 
 #content {
